; ModuleID = '/home/carl/AnghaBench/disque/src/extr_server.c_beforeSleep.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_server.c_beforeSleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.aeEventLoop = type { i32 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @beforeSleep(%struct.aeEventLoop* %0) #0 {
  %2 = alloca %struct.aeEventLoop*, align 8
  store %struct.aeEventLoop* %0, %struct.aeEventLoop** %2, align 8
  %3 = load %struct.aeEventLoop*, %struct.aeEventLoop** %2, align 8
  %4 = call i32 @UNUSED(%struct.aeEventLoop* %3)
  %5 = call i32 (...) @clusterBeforeSleep()
  %6 = call i32 (...) @handleClientsBlockedOnQueues()
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 4
  %8 = call i64 @listLength(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = call i32 (...) @processUnblockedClients()
  br label %12

12:                                               ; preds = %10, %1
  %13 = call i32 @flushAppendOnlyFile(i32 0)
  %14 = call i32 (...) @handleClientsWithPendingWrites()
  ret void
}

declare dso_local i32 @UNUSED(%struct.aeEventLoop*) #1

declare dso_local i32 @clusterBeforeSleep(...) #1

declare dso_local i32 @handleClientsBlockedOnQueues(...) #1

declare dso_local i64 @listLength(i32) #1

declare dso_local i32 @processUnblockedClients(...) #1

declare dso_local i32 @flushAppendOnlyFile(i32) #1

declare dso_local i32 @handleClientsWithPendingWrites(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
